fix: redo some styling

--- a/src/components/Clue.astro
+++ b/src/components/Clue.astro
@@ -15,11 +15,11 @@ const numbers = [...Array(length)];
 
 <style>
   .clue {
-    @apply bg-zinc-800 border-gray-600 border-t border-x content-end flex font-number justify-around mx-auto relative rounded-t-md shadow-lg text-gray-600 w-60;
+    @apply bg-zinc-800 border-gray-500 border-t border-x content-end flex font-number justify-around mx-auto relative rounded-t-md shadow-lg text-gray-500 w-60;
   }
 
   .clue-hider {
-    @apply absolute bg-zinc-800 border-gray-600 border-t duration-1000 h-full transition-transform translate-y-2/4 w-full z-10;
+    @apply absolute bg-zinc-800 border-gray-500 border-t duration-1000 h-full transition-transform translate-y-2/4 w-full z-10;
   }
 
   .clue-hider.show {
@@ -27,6 +27,6 @@ const numbers = [...Array(length)];
   }
 
   .clue-number {
-    @apply font-normal h-10 m-2 rounded-full select-none text-center text-4xl w-10;
+    @apply font-normal h-10 m-2 mb-4 rounded-full select-none text-center text-5xl w-10;
   }
 </style>
