--- a/src/components/Display.astro
+++ b/src/components/Display.astro
@@ -17,7 +17,7 @@ const numbers = [...Array(length)];
   }
 
   .display-number {
-    @apply bg-gray-600 h-10 leading-none relative rounded-xl scale-25 select-none text-center text-4.5xl w-10;
+    @apply bg-gray-500 h-10 leading-under relative rounded-xl scale-25 select-none text-center text-5xl w-10;
   }
 
   .display-number.filled {
