--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,11 +30,15 @@ const { description, title } = Astro.props;
     <GoogleFontsOptimizer url="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Qahiri&display=swap" />
     <link rel="sitemap" href="/sitemap-index.xml" />
   </head>
-  <body class="bg-blue-500 font-text h-screen text-gray-900">
+  <body>
     <slot />
   </body>
 </html>
 <style is:global>
+  body {
+    @apply bg-blue-400 font-text h-screen text-gray-900;
+  }
+
   body.correct {
     animation: body-correct 1s ease-in;
   }
