redo with astro 5, tailwind 4 and typescript

--- a/src/components/Clue.astro
+++ b/src/components/Clue.astro
@@ -1,32 +1,32 @@
 ---
-const {length} = Astro.props;
+export interface Props {
+  length: number
+}
+
+const { length } = Astro.props;
 const numbers = [...Array(length)];
 ---
 
-<div class="clue">
+<div class="bg-zinc-800 border-gray-500 border-t border-x content-end flex font-number justify-around mx-auto relative rounded-t-md shadow-lg text-gray-500 w-60">
   {
     numbers.map((item, index) => (
-      <div class="clue-number" id={`clue-number-${index + 1}`}></div>
+      <div
+        class="clue-number font-normal h-10 m-2 mb-4 rounded-full select-none text-center text-5xl w-10"
+        id={`clue-number-${index + 1}`}
+      ></div>
     ))
   }
 
-  <div class="clue-hider show" id="clue-hider"></div>
+  <div
+    class="absolute bg-zinc-800 border-gray-500 border-t duration-1000 h-full show transition-transform translate-y-2/4 w-full z-10"
+    id="clue-hider"
+  ></div>
 </div>
 
 <style>
-  .clue {
-    @apply bg-zinc-800 border-gray-500 border-t border-x content-end flex font-number justify-around mx-auto relative rounded-t-md shadow-lg text-gray-500 w-60;
-  }
+  @reference "../styles/global.css";
 
-  .clue-hider {
-    @apply absolute bg-zinc-800 border-gray-500 border-t duration-1000 h-full transition-transform translate-y-2/4 w-full z-10;
-  }
-
-  .clue-hider.show {
+  #clue-hider.show {
     @apply translate-y-full;
-  }
-
-  .clue-number {
-    @apply font-normal h-10 m-2 mb-4 rounded-full select-none text-center text-5xl w-10;
   }
 </style>
