--- a/src/components/Dialog.astro
+++ b/src/components/Dialog.astro
@@ -1,34 +1,19 @@
 ---
-const {id} = Astro.props;
+export interface Props {
+  id: string
+}
+
+const { id } = Astro.props;
 ---
 
-<dialog id={id} onclick="this.close()">
+<dialog
+  class="animate-dialog backdrop:backdrop-blur-sm border-none m-auto p-6 rounded-md w-md"
+  id={id}
+  onclick="this.close()"
+>
   <slot />
 
-  <button class="btn-cancel">Close</button>
+  <button
+    class="bg-gray-200 border-none cursor-pointer float-right mt-6 px-4 py-2 rounded-lg hover:bg-gray-400"
+  >Close</button>
 </dialog>
-
-<style>
-  .btn-cancel {
-    @apply bg-gray-200 border-none float-right mt-6 px-4 py-2 rounded-lg hover:bg-gray-400;
-  }
-
-  dialog {
-    animation-name: dialog-show;
-    animation-duration: 0.5s;
-    @apply border-none p-6 rounded-md w-112;
-  }
-
-  dialog::backdrop {
-    @apply backdrop-blur-sm;
-  }
-
-  @keyframes dialog-show {
-    from {
-      @apply opacity-0 -top-72;
-    }
-    to {
-      @apply opacity-100 top-0;
-    }
-  }
-</style>
