--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,18 +4,12 @@ import Score from './Score.astro';
 const {title} = Astro.props;
 ---
 
-<header class="header">
-  <h1>{title}</h1>
+<header class="flex flex-col items-center mb-8">
+  <h1 class="font-bold my-4 text-center text-3xl uppercase sm:text-5xl sm:my-6">{title}</h1>
 
   <Score />
 </header>
 
 <style>
-  .header {
-    @apply flex flex-col items-center mb-8;
-  }
-
-  .header > h1 {
-    @apply font-bold my-4 text-center text-3xl uppercase sm:text-5xl sm:my-6;
-  }
+  @reference "../styles/global.css";
 </style>
