--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,11 @@
 ---
 import Score from './Score.astro';
 
-const {title} = Astro.props;
+export interface Props {
+  title: string
+}
+
+const { title } = Astro.props;
 ---
 
 <header class="flex flex-col items-center mb-8">
