--- a/src/components/Pad.astro
+++ b/src/components/Pad.astro
@@ -1,4 +1,4 @@
-<div class="content-end flex flex-wrap font-number items-center justify-around mt-4 mx-0">
+<div class="content-end flex flex-wrap font-number items-center justify-around md:mt-4 mx-0">
   {
     [...Array(10)].map((item, index) => (
       <div class="pad-number border-gray-500 border-2 cursor-pointer leading-normal font-normal h-18 m-2 relative rounded-full select-none text-center text-5xl w-18">{(index + 1) % 10}</div>
