--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import type { Frontmatter } from '@/types/site'
-import GameLayout from '@/layouts/GameLayout.astro'
+import BaseLayout from '@/layouts/BaseLayout.astro'
 import Header from '@/components/Header.astro'
 import Clue from '@/components/Clue.astro'
 import Display from '@/components/Display.astro'
@@ -19,7 +19,7 @@ const frontmatter: Frontmatter = {
 const length = 3
 ---
 
-<GameLayout frontmatter={frontmatter}>
+<BaseLayout frontmatter={frontmatter}>
   <main class="h-full w-full" data-length={length}>
     <Header title={site.name} />
 
@@ -31,7 +31,7 @@ const length = 3
         <Pad />
       </div>
 
-      <Footer />
+      <Footer site={site} />
 		</section>
 
     <Dialog id="modal-help">
@@ -42,7 +42,7 @@ const length = 3
       <p class="mb-2" set:html={t('dialog.line4')}></p>
     </Dialog>
 	</main>
-</GameLayout>
+</BaseLayout>
 
 <style>
   @reference "../styles/global.css";
