--- a/src/components/Clue.astro
+++ b/src/components/Clue.astro
@@ -7,7 +7,7 @@ const { length } = Astro.props;
 const numbers = [...Array(length)];
 ---
 
-<div class="bg-zinc-800 border-gray-500 border-t border-x content-end flex font-number justify-around mx-auto relative rounded-t-md shadow-lg text-gray-500 w-60">
+<div class="bg-zinc-800 border-gray-500 border-t border-x content-end flex font-number justify-around mx-auto relative rounded-t-md shadow-xl text-gray-500 w-60">
   {
     numbers.map((item, index) => (
       <div
